Cleaned up building generation. Prepared to start building LOTS of nbts